# cross-gui-driver

./: CMakeLists.txt
src/: CMakeLists.txt  injector.cpp  main.cpp
src/common/: CMakeLists.txt
src/common/interface/: CMakeLists.txt  endpoint_handler_i.h
src/common/utils/: CMakeLists.txt  elf_parser.cpp  elf_parser.h  logger.cpp  logger.h
src/drivers/: CMakeLists.txt
src/drivers/java/adapter/: CMakeLists.txt  bridge.cpp  bridge.h  java_endpoint_handler.cpp  java_endpoint_handler_.h
src/drivers/java/gui-control/: pom.xml
src/drivers/java/gui-control/src/main/java/org/kds/: Controller.java
src/drivers/java/gui-control/src/test/java/org/kds/: AppTest.java
src/drivers/java/gui-driver/: generate-header.sh  pom.xml
src/drivers/java/gui-driver/src/main/java/: module-info.java
src/drivers/java/gui-driver/src/main/java/org/kds/: Plugin.java
src/drivers/java/gui-driver/src/main/native/include/: org_kds_Plugin.h
src/drivers/java/gui-driver/src/main/native/src/: jni.cpp
src/drivers/javafx/: CMakeLists.txt  bridge.cpp  bridge.h  java_endpoint_handler.cpp
src/drivers/javafx/driver/: pom.xml
src/drivers/javafx/driver/src/main/java/org/kds/: Controller.java
src/drivers/qt/: CMakeLists.txt  qt_endpoint_handler.cpp  qt_endpoint_handler.h
src/endpoints/: session.cpp  title.cpp  title.h  window_rect.cpp  window_rect.h
src/init/: CMakeLists.txt
src/init/autoload/: CMakeLists.txt
src/init/manual/java/: CMakeLists.txt
src/init/manual/java/src/main/java/org/kds/: Plugin.java
src/init/manual/java/src/main/native/src/: jni.cpp
src/server/: CMakeLists.txt  main.cpp
src/server/endpoints/: session.h
src/server/include/: entry.h
test/java/simple-app/: pom.xml
test/java/simple-app/src/main/java/: module-info.java
test/java/simple-app/src/main/java/kds/org/: App.java  Plugin.java  SystemInfo.java
test/java/simple-app2/: pom.xml
test/java/simple-app2/src/main/java/org/kds/: App.java
test/qt/: CMakeLists.txt  dialog.cpp  dialog.h  main.cpp
